update notebook TD 1

--- a/docs/tutorials/sits_classification/sits_classification.ipynb
+++ b/docs/tutorials/sits_classification/sits_classification.ipynb
@@ -30,7 +30,7 @@
    "id": "9b870df4-5b3f-4f5b-bf64-a98c130ab3dc",
    "metadata": {},
    "source": [
-    "#### Structure of the repo\n",
+    "### Structure of the repo\n",
     "\n",
     "The code for running this tutorial is available at https://github.com/Romain3Ch216/DL4IA/tree/main/docs/tutorials/sits_classification. We suggest to fork the [DL4IA](https://github.com/Romain3Ch216/DL4IA) repo and clone your fork:\n",
     "```\n",
